# Steel-Defect-Detection-on-optimize-YOLO

./: .gitignore  README.md  main.py  pyproject.toml
configs/: base.yaml  data.yaml
data/processed/labels/: train.cache  val.cache
results/metrics/: experiment_results.csv
runs/detect/experiments/baseline_v1/: args.yaml
runs/detect/experiments/baseline_v12/: args.yaml
runs/detect/experiments/baseline_v13/: args.yaml  results.csv
scripts/: prepare_dataset.py  verify_dataset.py  visualize_samples.py
src/: logger.py
